CoCRM/myproject/force-app/main/default/objects/Contact/fields/Became_Student__c.field-meta.xml
<CustomField>
    <fullName>Became_Student__c</fullName>
    <label>Became Student</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Deferred a Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>