CoCRM/myproject/force-app/main/default/objects/Contact/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Freshman</fullName>
            </value>
            <value>
                <fullName>Sophomore</fullName>
            </value>
            <value>
                <fullName>Junior</fullName>
            </value>
            <value>
                <fullName>Senior</fullName>
            </value>
            <value>
                <fullName>Graduated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>