CoCRM/myproject/force-app/main/default/objects/Contact/fields/Class_Of__c.field-meta.xml
<CustomField>
    <fullName>Class_Of__c</fullName>
    <formula>If(NOT(ISBLANK(Expected_Graduation_Date__c)), Text(Year( Expected_Graduation_Date__c)), 


If(MONTH(TODAY())&lt;7,

CASE(Class__c, 
&quot;Senior&quot;,TEXT(Year(Today())),
&quot;Junior&quot;, TEXT(Year(Today())+1),
&quot;Sophomore&quot;, TEXT(Year(Today())+2),
&quot;Freshman&quot;, TEXT(Year(Today())+3),
&quot;&quot;),

CASE(Class__c, 
&quot;Senior&quot;,TEXT(Year(Today())+1),
&quot;Junior&quot;, TEXT(Year(Today())+2),
&quot;Sophomore&quot;, TEXT(Year(Today())+3),
&quot;Freshman&quot;, TEXT(Year(Today())+4),
&quot;&quot;))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated Based on &quot;Graduation Date&quot; or &quot;Class&quot;</inlineHelpText>
    <label>Class Of</label>
    <type>Text</type>
</CustomField>