CoCRM/myproject/force-app/main/default/objects/Contact/fields/Dad_Jewish__c.field-meta.xml
<CustomField>
    <fullName>Dad_Jewish__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dad Jewish</label>
    <type>Checkbox</type>
</CustomField>