CoCRM/myproject/force-app/main/default/objects/Contact/fields/Expected_Entry_Season__c.field-meta.xml
<CustomField>
    <fullName>Expected_Entry_Season__c</fullName>
    <inlineHelpText>What season the student is expected to enter university</inlineHelpText>
    <label>Expected Entry Season</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fall</fullName>
            </value>
            <value>
                <fullName>Spring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>