CoCRM/myproject/force-app/main/default/objects/Contact/fields/Expected_Entry_Year__c.field-meta.xml
<CustomField>
    <fullName>Expected_Entry_Year__c</fullName>
    <inlineHelpText>Year student is expected to enter university</inlineHelpText>
    <label>Expected Entry Year</label>
    <type>Date</type>
</CustomField>