CoCRM/myproject/force-app/main/default/objects/Contact/fields/Expected_Graduation_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Graduation_Date__c</fullName>
    <label>Graduation Date</label>
    <type>Date</type>
</CustomField>