CoCRM/myproject/force-app/main/default/objects/Contact/fields/Grad_Program__c.field-meta.xml
<CustomField>
    <fullName>Grad_Program__c</fullName>
    <label>Grad Program</label>
    <length>20</length>
    <type>Text</type>
</CustomField>