CoCRM/myproject/force-app/main/default/objects/Contact/fields/Hebrew_Date__c.field-meta.xml
<CustomField>
    <fullName>Hebrew_Date__c</fullName>
    <label>Hebrew Date</label>
    <length>1300</length>
    <type>Html</type>
</CustomField>