CoCRM/myproject/force-app/main/default/objects/Contact/fields/Jewish__c.field-meta.xml
<CustomField>
    <fullName>Jewish__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jewish</label>
    <type>Checkbox</type>
</CustomField>