CoCRM/myproject/force-app/main/default/objects/Contact/fields/Mom_Jewish__c.field-meta.xml
<CustomField>
    <fullName>Mom_Jewish__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mom Jewish</label>
    <type>Checkbox</type>
</CustomField>