CoCRM/myproject/force-app/main/default/objects/Contact/fields/Religious_Background__c.field-meta.xml
<CustomField>
    <fullName>Religious_Background__c</fullName>
    <label>Religious Background</label>
    <type>TextArea</type>
</CustomField>