CoCRM/myproject/force-app/main/default/objects/Contact/fields/Type_of_Student__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Student__c</fullName>
    <label>Type of Student</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Undergraduate</fullName>
            </value>
            <value>
                <fullName>Graduate Student</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>