CoCRM/myproject/force-app/main/default/objects/Contact/fields/Undergraduate_School__c.field-meta.xml
<CustomField>
    <fullName>Undergraduate_School__c</fullName>
    <label>Undergraduate School</label>
    <length>20</length>
    <type>Text</type>
</CustomField>