CoCRM/myproject/force-app/main/default/objects/Contact/recordTypes/Alum.recordType-meta.xml
<RecordType>
    <fullName>Alum</fullName>
    <active>true</active>
    <label>Alum</label>
</RecordType>