CoCRM/myproject/force-app/main/default/objects/Contact/recordTypes/Prospective_Student.recordType-meta.xml
<RecordType>
    <fullName>Prospective_Student</fullName>
    <active>true</active>
    <label>Prospective Student</label>
</RecordType>